# insomnia-run

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  e2e-test.yml  scorecards.yml
docs/: configuration.md  examples.md  index.md  quickstart.md  requirements.in  requirements.txt  troubleshooting.md
docs/assets/stylesheets/: extra.css
docs/examples/: index.md
docs/getting-started/: index.md
docs/guides/: collections.md  secrets.md  test-suites.md
docs/reference/: inputs.md
scripts/: execute-insomnia.sh  generate_report.py
src/insomnia_run/: main.py  models.py  parser.py  reporter.py  runner.py
tests/: test_models.py  test_output_formats.py  test_parser.py  test_reporter.py  test_runner.py  test_sanity.py  test_version.py
tests/fixtures/: env_var_test.yaml  mixed_results_suite.yaml  mixed_test_suite.yaml  passing_suite.yaml  passing_test_suite.yaml
